@@ -928,6 +928,45 @@
       </spirits>
     </tradition>
     <tradition>
+      <id>9d0cec5d-4350-47da-9ced-6619bbcb1936</id>
+      <name>Traditionalist Shaman</name>
+      <drain>{WIL} + {CHA}</drain>
+      <source>FA</source>
+      <page>74</page>
+      <bonus>
+        <addquality select="Harmony with Nature, the Shaman’s Code">Code of Honor</addquality>
+        <!-- TODO: Disable binding spirits -->
+        <!-- TODO: Add Spirit Affinity at IG 2. Easiest proxy is to have an additional quality that requires IG2 + this tradition -->
+        <!-- TODO: Add +2 Dicepool when summoning choice of spirit at IG5. Proxy quality easiest again -->
+      </bonus>
+      <required>
+        <oneof>
+          <quality>Mentor Spirit</quality>
+        </oneof>
+      </required>
+      <spirits>
+        <spiritcombat>Spirit of Beasts</spiritcombat>
+        <spiritdetection>Spirit of Water</spiritdetection>
+        <spirithealth>Spirit of Earth</spirithealth>
+        <spiritillusion>Spirit of Air</spiritillusion>
+        <spiritmanipulation>Spirit of Man</spiritmanipulation>
+      </spirits>
+    </tradition>
+    <tradition>
+      <id>10c2a345-3bbf-4368-b093-e1da08530f12</id>
+      <name>Ancestor Shaman</name>
+      <drain>{WIL} + {CHA}</drain>
+      <source>FA</source>
+      <page>74</page>
+      <spirits>
+        <spiritcombat>Spirit of Beasts</spiritcombat>
+        <spiritdetection>Spirit of Water</spiritdetection>
+        <spirithealth>Spirit of Earth</spirithealth>
+        <spiritillusion>Spirit of Air</spiritillusion>
+        <spiritmanipulation>Spirit of Man</spiritmanipulation>
+      </spirits>
+    </tradition>
+    <tradition>
       <id>2cd90e8a-3674-470e-b95d-eb80c008fc4a</id>
       <name>Tarot</name>
       <drain>{WIL} + {LOG}</drain>
